cmake_minimum_required (VERSION 2.8)
project (client)
include_directories (./)
set( SRC_LIB ./md5.c ./obstreamntp.c)
set( SRC_DEMO ./demo.c)
#aux_source_directory(. DIR_SRCS)
find_library( zmq-lib zmq)
add_library (obstreamntp SHARED ${SRC_LIB})
#add_library (obstreamntp STATIC ${SRC_LIB})
target_link_libraries (obstreamntp zmq)
add_executable(client.out ${SRC_DEMO})
target_link_libraries (client.out obstreamntp)
